rust/node-structuring/tests/snapshots/examples__figures-with-captions-reference.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This document has figure references that should NOT be treated as captions."
          }
        }
      ]
    },
    {
      "type": "ImageObject",
      "contentUrl": "image.png",
      "caption": [
        {
          "type": "Text",
          "value": {
            "string": "Example image"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Figure 2 shows that the results are significant. This paragraph should not be treated as a caption because it references rather than describes the figure."
          }
        }
      ]
    }
  ]
}
