rust/node-structuring/tests/snapshots/examples__heading1-to-title-not-first.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This paragraph appears before any heading, making it the first content block."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Data Analysis Methods"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This level 1 heading should NOT be extracted as title because it is not the very first block in the document. The paragraph above comes first, so this heading should remain in the content as a regular heading."
          }
        }
      ]
    }
  ]
}
