rust/node-structuring/tests/snapshots/examples__headings-decrement-basic.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "Document Title"
      }
    }
  ],
  "frontmatter": "structuring:\n  - heading1-to-title\n  - headings-decrement",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "The above level 1 heading should be extracted as the document title, triggering heading decrement for all remaining headings."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Introduction"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This level 2 heading should become level 1 after decrementing because the title was extracted."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 2,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Background"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This level 3 heading should become level 2 after decrementing."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Methods"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This level 2 heading should also become level 1 after decrementing."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 3,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Deep Nesting"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This level 4 heading should become level 3 after decrementing."
          }
        }
      ]
    }
  ],
  "structuring": [
    "heading1-to-title",
    "headings-decrement"
  ]
}
