rust/node-structuring/tests/snapshots/examples__headings-decrement-deep-levels.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "Technical Specification"
      }
    }
  ],
  "frontmatter": "structuring:\n  - heading1-to-title\n  - headings-decrement",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "The above should be extracted, triggering heading decrement for all remaining headings."
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 1,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Overview"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Level 2 → Level 1"
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 2,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Architecture"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Level 3 → Level 2"
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 3,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Components"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Level 4 → Level 3"
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 4,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Implementation"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Level 5 → Level 4"
          }
        }
      ]
    },
    {
      "type": "Heading",
      "level": 5,
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Details"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "Level 6 → Level 5"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This tests that all heading levels from 2-6 are properly decremented by 1 when a title is extracted."
          }
        }
      ]
    }
  ],
  "structuring": [
    "heading1-to-title",
    "headings-decrement"
  ]
}
