rust/node-structuring/tests/snapshots/examples__headings-to-paragraphs-long.snap
---
source: rust/node-structuring/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This is a very long heading that exceeds 80 characters and should be converted to a paragraph because it exhibits paragraph-like traits rather than heading traits"
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "This content should remain as a paragraph following the converted heading."
          }
        }
      ]
    }
  ]
}
